--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,9 +15,9 @@ services:
       image: swaggerapi/swagger-ui:latest
       container_name: aos2023_clientes_ui
       ports:
-        - "8000:8000"
+        - "8000:8080"
       environment:
-        SWAGGER_JSON: /aos/openapi.yml
+        SWAGGER_JSON: /aos/openapi.yaml
       volumes:
         - ./Clientes/openapi:/aos:ro
 
@@ -34,9 +34,9 @@ services:
       image: swaggerapi/swagger-ui:latest
       container_name: aos2023_logs_ui
       ports:
-        - "8001:8000"
+        - "8001:8080"
       environment:
-        SWAGGER_JSON: /aos/openapi.yml
+        SWAGGER_JSON: /aos/openapi.yaml
       volumes:
         - ./Logs/openapi:/aos:ro
 
@@ -53,7 +53,7 @@ services:
       image: swaggerapi/swagger-ui:latest
       container_name: aos2023_facturas_ui
       ports:
-        - "8002:8000"
+        - "8002:8080"
       environment:
         SWAGGER_JSON: /aos/openapi.yaml
       volumes:
@@ -72,7 +72,7 @@ services:
       image: swaggerapi/swagger-ui:latest
       container_name: aos2023_notificaciones_ui
       ports:
-        - "8003:8000"
+        - "8003:8080"
       environment:
           SWAGGER_JSON: /aos/openapi.yaml
       volumes:
@@ -91,7 +91,7 @@ services:
       image: swaggerapi/swagger-ui:latest
       container_name: aos2023_recambios_ui
       ports:
-        - "8004:8000"
+        - "8004:8080"
       environment:
         SWAGGER_JSON: /aos/openapi.yaml
       volumes:
@@ -112,7 +112,7 @@ services:
       image: swaggerapi/swagger-ui:latest
       container_name: aos2023_trabajos_ui
       ports:
-        - "8005:8000"
+        - "8005:8080"
       environment:
         SWAGGER_JSON: /aos/openapi.yaml
       volumes:
@@ -133,7 +133,7 @@ services:
       image: swaggerapi/swagger-ui:latest
       container_name: aos2023_vehiculos_ui
       ports:
-        - "8006:8000"
+        - "8006:8080"
       environment:
         SWAGGER_JSON: /aos/openapi.yaml
       volumes:
