--- a/kubernetes/clientes-backend-service.yaml
+++ b/kubernetes/clientes-backend-service.yaml
@@ -4,11 +4,8 @@ metadata:
   name: clientes-backend
 spec:
   selector:
-    io.kompose.service: aos2023_clientes_mock
+    io.kompose.service: aos2023-clientes-mock
   ports:
     - port: 4010
       targetPort: 4010
   type: ClusterIP
-
-
-  
