--- a/kubernetes/clientes-service.yaml
+++ b/kubernetes/clientes-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: clientes-frontend
+  name: clientes
 spec:
   type: NodePort
   selector:
-    app: aos2023-clientes-ui
+    app: clientes
   ports:
     - port: 8000
       name: frontend
@@ -15,3 +15,7 @@ spec:
       name: backend
       targetPort: 4010
       nodePort: 30006
+    - port: 80
+      name: proxy
+      targetPort: 80
+      nodePort: 30004
