--- a/k8.yaml
+++ b/k8.yaml
@@ -103,10 +103,12 @@ metadata:
     io.kompose.service: frontendclientes
   name: frontendclientes
 spec:
+  type: NodePort
   ports:
     - name: "8001"
       port: 8001
       targetPort: 8080
+      nodePort: 30000
   selector:
     io.kompose.service: frontendclientes
 status:
@@ -170,10 +172,12 @@ metadata:
     io.kompose.service: frontendfacturas
   name: frontendfacturas
 spec:
+  type: NodePort
   ports:
     - name: "8003"
       port: 8003
       targetPort: 8080
+      nodePort: 30001
   selector:
     io.kompose.service: frontendfacturas
 status:
@@ -237,10 +241,12 @@ metadata:
     io.kompose.service: frontendlogs
   name: frontendlogs
 spec:
+  type: NodePort
   ports:
     - name: "8006"
       port: 8006
       targetPort: 8080
+      nodePort: 30002
   selector:
     io.kompose.service: frontendlogs
 status:
@@ -257,10 +263,12 @@ metadata:
     io.kompose.service: frontendnotificaciones
   name: frontendnotificaciones
 spec:
+  type: NodePort
   ports:
     - name: "8005"
       port: 8005
       targetPort: 8080
+      nodePort: 30003
   selector:
     io.kompose.service: frontendnotificaciones
 status:
@@ -324,10 +332,12 @@ metadata:
     io.kompose.service: frontendnotificaciones
   name: frontendnotificaciones
 spec:
+  type: NodePort
   ports:
     - name: "8005"
       port: 8005
       targetPort: 8080
+      nodePort: 30004
   selector:
     io.kompose.service: frontendnotificaciones
 status:
@@ -438,10 +448,12 @@ metadata:
     io.kompose.service: frontendrecambios
   name: frontendrecambios
 spec:
+  type: NodePort
   ports:
     - name: "8004"
       port: 8004
       targetPort: 8080
+      nodePort: 30005
   selector:
     io.kompose.service: frontendrecambios
 status:
@@ -506,10 +518,12 @@ metadata:
     io.kompose.service: frontendtrabajos
   name: frontendtrabajos
 spec:
+  type: NodePort
   ports:
     - name: "8000"
       port: 8000
       targetPort: 8080
+      nodePort: 30006
   selector:
     io.kompose.service: frontendtrabajos
 status:
@@ -573,10 +587,12 @@ metadata:
     io.kompose.service: frontendvehiculos
   name: frontendvehiculos
 spec:
+  type: NodePort
   ports:
     - name: "8002"
       port: 8002
       targetPort: 8080
+      nodePort: 30007
   selector:
     io.kompose.service: frontendvehiculos
 status:
@@ -593,10 +609,12 @@ metadata:
     io.kompose.service: mock-backendclientes
   name: mock-backendclientes
 spec:
+  type: NodePort
   ports:
     - name: "4011"
       port: 4011
       targetPort: 4010
+      nodePort: 30008
   selector:
     io.kompose.service: mock-backendclientes
 status:
@@ -613,10 +631,12 @@ metadata:
     io.kompose.service: mock-backendfacturas
   name: mockbackendfacturas
 spec:
+  type: NodePort
   ports:
     - name: "4013"
       port: 4013
       targetPort: 4010
+      nodePort: 30009
   selector:
     io.kompose.service: mock-backendfacturas
 status:
@@ -634,10 +654,12 @@ metadata:
     io.kompose.service: mock-backendlogs
   name: mockbackendlogs
 spec:
+  type: NodePort
   ports:
     - name: "4016"
       port: 4016
       targetPort: 4010
+      nodePort: 30010
   selector:
     io.kompose.service: mock-backendlogs
 status:
@@ -654,10 +676,12 @@ metadata:
     io.kompose.service: mock-backendnotificaciones
   name: mockbackendnotificaciones
 spec:
+  type: NodePort
   ports:
     - name: "4015"
       port: 4015
       targetPort: 4010
+      nodePort: 30011
   selector:
     io.kompose.service: mock-backendnotificaciones
 status:
@@ -674,10 +698,12 @@ metadata:
     io.kompose.service: mock-backendrecambios
   name: mockbackendrecambios
 spec:
+  type: NodePort
   ports:
     - name: "4014"
       port: 4014
       targetPort: 4010
+      nodePort: 30012
   selector:
     io.kompose.service: mock-backendrecambios
 status:
@@ -694,10 +720,12 @@ metadata:
     io.kompose.service: mock-backendtrabajos
   name: mockbackendtrabajos
 spec:
+  type: NodePort
   ports:
     - name: "4010"
       port: 4010
       targetPort: 4010
+      nodePort: 30013
   selector:
     io.kompose.service: mock-backendtrabajos
 status:
@@ -714,10 +742,12 @@ metadata:
     io.kompose.service: mock-backendvehiculos
   name: mockbackendvehiculos
 spec:
+  type: NodePort
   ports:
     - name: "4012"
       port: 4012
       targetPort: 4010
+      nodePort: 30014
   selector:
     io.kompose.service: mock-backendvehiculos
 status:
@@ -729,14 +759,18 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mock-backend-clientes
+  labels:
+    io.kompose.service: mock-backendclientes
 spec:
   containers:
     - name: prism
       image: stoplight/prism
       args:
-        - "mock"
+        - mock
+        - --cors
+        - -h 
+        - 0.0.0.0
         - "/openapi/openapi/Clientes/openapi/openapi.yaml"
-        - "--port=4010"
       ports:
         - containerPort: 4010
       volumeMounts:
@@ -753,14 +787,18 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mock-backend-facturas
+  labels:
+    io.kompose.service: mock-backendfacturas
 spec:
   containers:
     - name: prism
       image: stoplight/prism
       args:
-        - "mock"
+        - mock
+        - --cors
+        - -h 
+        - 0.0.0.0
         - "/openapi/openapi/Facturas/openapi/openapi.yaml"
-        - "--port=4010"
       ports:
         - containerPort: 4010
       volumeMounts:
@@ -776,14 +814,18 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mock-backend-logs
+  labels:
+    io.kompose.service: mock-backendlogs
 spec:
   containers:
     - name: prism
       image: stoplight/prism
       args:
-        - "mock"
+        - mock
+        - --cors
+        - -h 
+        - 0.0.0.0
         - "/openapi/openapi/Logs/openapi/openapi.yaml"
-        - "--port=4010"
       ports:
         - containerPort: 4010
       volumeMounts:
@@ -799,14 +841,18 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mock-backend-notificaciones
+  labels:
+    io.kompose.service: mock-backendnotificaciones
 spec:
   containers:
     - name: prism
       image: stoplight/prism
       args:
-        - "mock"
+        - mock
+        - --cors
+        - -h 
+        - 0.0.0.0
         - "/openapi/openapi/Notificaciones/openapi/openapi.yaml"
-        - "--port=4010"
       ports:
         - containerPort: 4010
       volumeMounts:
@@ -822,14 +868,18 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mock-backend-recambios
+  labels:
+    io.kompose.service: mock-backendrecambios
 spec:
   containers:
     - name: prism
       image: stoplight/prism
       args:
-        - "mock"
+        - mock
+        - --cors
+        - -h 
+        - 0.0.0.0
         - "/openapi/openapi/Recambios/openapi/openapi.yaml"
-        - "--port=4010"
       ports:
         - containerPort: 4010
       volumeMounts:
@@ -845,14 +895,18 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mock-backend-trabajos
+  labels:
+    io.kompose.service: mock-backendtrabajos
 spec:
   containers:
     - name: prism
       image: stoplight/prism
       args:
-        - "mock"
+        - mock
+        - --cors
+        - -h 
+        - 0.0.0.0
         - "/openapi/openapi/Trabajos/openapi/openapi.yaml"
-        - "--port=4010"
       ports:
         - containerPort: 4010
       volumeMounts:
@@ -868,14 +922,18 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mock-backend-vehiculos
+  labels:
+    io.kompose.service: mock-backendvehiculos
 spec:
   containers:
     - name: prism
       image: stoplight/prism
       args:
-        - "mock"
+        - mock
+        - --cors
+        - -h 
+        - 0.0.0.0
         - "/openapi/openapi/Vehiculos/openapi/openapi.yaml"
-        - "--port=4010"
       ports:
         - containerPort: 4010
       volumeMounts:
@@ -885,67 +943,3 @@ spec:
         - name: openapi-volume
           persistentVolumeClaim:
             claimName: openapi-pvc
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.28.0 (HEAD)
-  creationTimestamp: null
-  labels:
-    io.kompose.service: proxylogs
-  name: proxylogs
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      io.kompose.service: proxylogs
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-      annotations:
-        kompose.cmd: kompose convert
-        kompose.version: 1.28.0 (HEAD)
-      creationTimestamp: null
-      labels:
-        io.kompose.network/aosmicroservicio-grupo9-default: "true"
-        io.kompose.service: proxylogs
-    spec:
-      containers:
-        - image: caddy:latest
-          name: aos2023-proxy
-          ports:
-            - containerPort: 80
-          resources: {}
-          volumeMounts:
-            - mountPath: /openapi/openapi
-              name: openapi-volume
-      restartPolicy: Always
-      volumes:
-        - name: openapi-volume
-          persistentVolumeClaim:
-            claimName: openapi-pvc
-status: {}
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.28.0 (HEAD)
-  creationTimestamp: null
-  labels:
-    io.kompose.service: proxylogs
-  name: proxylogs
-spec:
-  ports:
-    - name: "80"
-      port: 80
-      targetPort: 80
-  selector:
-    io.kompose.service: proxylogs
-status:
-  loadBalancer: {}
